--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs"]
 	path = docs
 	url = https://github.com/claczny/VizBin.wiki.git
+[submodule "wiki"]
+	path = wiki
+	url = https://github.com/claczny/VizBin.wiki.git
