--- a/src/interface/VizBin/nbproject/project.properties
+++ b/src/interface/VizBin/nbproject/project.properties
@@ -33,12 +33,14 @@ file.reference.blas.jar=lib/blas.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.ejml-0.23.jar=lib/ejml-0.23.jar
 file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
+file.reference.mtj.jar=lib/mtj-1.0.2-SNAPSHOT-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.blas.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.ejml-0.23.jar}:\
+    ${file.reference.mtj.jar}:\
     ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
