--- a/src/interface/VizBin/build.xml
+++ b/src/interface/VizBin/build.xml
@@ -18,10 +18,26 @@
 	    <zipfileset src="lib/log4j-1.2.17.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/commons-io-2.4.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/mtj-1.0.2-SNAPSHOT-jar-with-dependencies.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/hamcrest-core-1.3.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/jcommon-1.0.23.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/jfreechart-1.0.19-experimental.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/jfreechart-1.0.19.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/jfreechart-1.0.19-swt.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/jfreesvg-2.0.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/junit-4.11.jar" excludes="META-INF/*" />
 	    <manifest>
 	        <attribute name="Main-Class" value="lu.uni.lcsb.vizbin.Main"/>
 	    </manifest>
 	  </jar>
+    </target>
+    <!-- Creates Javadoc -->
+    <target name="docs" depends="compile">
+	    <javadoc packagenames="src" sourcepath="${src.dir}" destdir="${docs.dir}">
+	    <!-- Define which files / directory should get included, we include all -->
+    	        <fileset dir="${dir.lib}">
+		    <include name="*.jar" />
+	        </fileset>
+	    </javadoc>
     </target>
     <!--
 
