--- a/src/interface/VizBin/nbproject/project.properties
+++ b/src/interface/VizBin/nbproject/project.properties
@@ -33,7 +33,18 @@ file.reference.blas.jar=lib/blas.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.ejml-0.23.jar=lib/ejml-0.23.jar
 file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=lib/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=lib/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=lib/jfreesvg-2.0.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=lib/orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=lib/orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=lib/servlet.jar
+file.reference.swtgraphics2d.jar=lib/swtgraphics2d.jar
 file.reference.mtj.jar=lib/mtj-1.0.2-SNAPSHOT-jar-with-dependencies.jar
+
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,6 +52,16 @@ javac.classpath=\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.ejml-0.23.jar}:\
     ${file.reference.mtj.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}:\
     ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
