--- a/src/interface/VizBin/build.xml
+++ b/src/interface/VizBin/build.xml
@@ -17,6 +17,7 @@
 	    <zipfileset src="lib/ejml-0.23.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/log4j-1.2.17.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/commons-io-2.4.jar" excludes="META-INF/*" />
+	    <zipfileset src="lib/commons-cli-1.2.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/mtj-1.0.2-SNAPSHOT-jar-with-dependencies.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/hamcrest-core-1.3.jar" excludes="META-INF/*" />
 	    <zipfileset src="lib/jcommon-1.0.23.jar" excludes="META-INF/*" />
