--- a/src/interface/VizBin/nbproject/project.properties
+++ b/src/interface/VizBin/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.blas.jar=lib/blas.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
+file.reference.commons-cli-1.2.jar=lib/commons-io-1.2.jar
 file.reference.ejml-0.23.jar=lib/ejml-0.23.jar
 file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
@@ -50,6 +51,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.blas.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-cli-1.2.jar}:\
     ${file.reference.ejml-0.23.jar}:\
     ${file.reference.mtj.jar}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
