--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: c
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y libblas-dev maven
+  - sudo apt-get install -y libblas-dev libboost-all-dev maven
 script: make
