--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: c
 before_install:
   - sudo apt-get update
-  - sudo apt-get install -y libblas-dev libboost-all-dev maven
-script: make
+  - sudo apt-get install -y libblas-dev libboost-all-dev libgsl0-dev maven
+script: 
+  - make cleana linux install
