--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install -y libblas-dev libboost-all-dev libgsl0-dev maven
 script: 
-  - make cleana linux install
+  - make clean linux install
